fixed css on mobile homepage

--- a/client/src/components/HomeCard/style.css
+++ b/client/src/components/HomeCard/style.css
@@ -1,28 +1,1 @@
 
-.container-fluid {
-    margin-top: 1%;
-    /* background-color: #A22E37; */
-    /* box-shadow: 1px 5px 5px black; */
-  
-    width: 90%;
-  }
-  .homecard {
-    background-color: #a22e37;
-    border-radius: 25px;
-    box-shadow: 1px 5px 5px black;
-  }
-  .homeCardTitle {
-    font-size: 35px;
-    text-align: center;
-    margin: -40px;
-  }
-  
-  .card-text {
-    color: burlywood;
-    font-size: large;
-  }
-  
-  #profilePicture {
-    box-shadow: 1px 5px 5px black;
-  }
-  
